# Arduino-per-test-VLD

./: .gitignore  README.md  bench_scpi.py  compilazione.spec  pyproject.toml  requirements.txt  run_test_wrapper.py  start_gui.bat  test_vld.spec  test_vld_wrapper.spec
Portabile/: Avvia TestVLD.bat  LEGGIMI.txt
Portabile_Compilazione/: Avvia Compilazione.bat  LEGGIMI.txt
compilazione_vld/: avvia_compilazione.bat  compilazione.py
itech_interface/: README.md  TestVLD.spec  build_portable.py  install_and_run.bat  pyproject.toml  run.py
itech_interface/src/itech_interface/: __init__.py  ble_client.py  ble_monitor_gui.py  controller.py  excel_handler.py  gui.py  main.py  network.py
itech_interface/src/itech_interface.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
itech_interface/src/itech_interface/handlers/: ble_handlers.py
itech_interface/src/itech_interface/widgets/: __init__.py  ble_group.py  ble_status_bar.py  ble_worker.py  dialog_style.py  excel_group.py  manual_group.py  psu_status_bar.py  result_label.py  status_semaphore.py  test_100v_dialog.py  test_500v_dialog.py  test_ad_dialog.py  test_atal_dialog.py  test_group.py  test_innesco_dialog.py  test_tracker.py
itech_interface/tests/: test_controller.py  test_gui.py  test_network.py
