[project]
name = "itech_interface"
version = "0.1.0"
description = "GUI application to control ITECH IT6018C-1500-30 power supply over LAN"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "PyQt5",
    "openpyxl"
]
# or use tkinter built-in; PyQt5 provides richer GUI

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
python_files = "tests/*.py"
